@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-03-29T00:37:37Z",
+  "timestamp" : "2022-03-29T08:09:35Z",
   "count" : 0,
   "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 15,
+  "count_prev_day_inc" : 39,
   "count_prev_day_dec" : 0,
   "uniques" : 0,
   "uniques_minmax" : [ 0, 0 ],
