@@ -1,3 +1,9 @@
+2022-03-29T08:09:35Z:
+* notice: last 14d: all unq: 187 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 540 34 / 703 42
+* notice: next accum: outdated-all outdated-unq / all unq: 540 34 / 727 42
+* notice: prev json diff // prev day diff: unq all: +0 +24 / -0 -0 // +0 +39 / -0 -0
+
 2022-03-29T00:37:37Z:
 * notice: last 14d: all unq: 163 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 540 34 / 688 42
